--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2 class="text-4xl font-extrabold text-center text-blue-700 mb-4">Zarabiaj na Udostępnianiu Linków!</h2>
             <p class="text-lg text-gray-700 text-center mb-6">
                 Udostępniaj swój unikalny link do naszej strony i zarabiaj <span class="font-bold text-green-600">0,01 centa za każde unikalne kliknięcie!</span>
-                Im więcej osób odwiedzi naszą stronę dzięki Tobu, tym więcej zarobisz.
+                Im więcej osób odwiedzi naszą stronę dzięki Tobie, tym więcej zarobisz.
             </p>
             <p class="text-md text-gray-600 text-center">
                 Zarejestruj się lub zaloguj, aby zacząć zarabiać już dziś!
@@ -47,11 +47,11 @@
             <form id="loginForm" class="space-y-4">
                 <div>
                     <label for="loginUsername" class="block text-sm font-medium text-gray-700">Nazwa użytkownika:</label>
-                    <input type="text" id="loginUsername" name="username" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+                    <input type="text" id="loginUsername" name="username" required minlength="3" maxlength="20" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
                 </div>
                 <div>
                     <label for="loginPassword" class="block text-sm font-medium text-gray-700">Hasło:</label>
-                    <input type="password" id="loginPassword" name="password" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+                    <input type="password" id="loginPassword" name="password" required minlength="8" maxlength="30" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
                 </div>
                 <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out">
                     Zaloguj
@@ -65,11 +65,11 @@
             <form id="registerForm" class="hidden space-y-4 mt-6">
                 <div>
                     <label for="registerUsername" class="block text-sm font-medium text-gray-700">Nazwa użytkownika:</label>
-                    <input type="text" id="registerUsername" name="username" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+                    <input type="text" id="registerUsername" name="username" required minlength="3" maxlength="20" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
                 </div>
                 <div>
                     <label for="registerPassword" class="block text-sm font-medium text-gray-700">Hasło:</label>
-                    <input type="password" id="registerPassword" name="password" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+                    <input type="password" id="registerPassword" name="password" required minlength="8" maxlength="30" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
                 </div>
                 <button type="submit" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out">
                     Zarejestruj
@@ -113,6 +113,8 @@
 
             <p class="text-sm text-gray-500 text-center mt-6">
                 Pamiętaj: Zarabiasz 0,01 centa za każde unikalne kliknięcie. System filtruje sztuczne kliknięcia.
+                <br>
+                **Opcja wypłaty środków pojawi się, gdy Twoje zarobki osiągną 5.00 $!**
             </p>
         </section>
     </main>
@@ -173,6 +175,16 @@
             hideMessage();
             const username = document.getElementById('registerUsername').value;
             const password = document.getElementById('registerPassword').value;
+
+            // Frontend validation for length
+            if (username.length < 3 || username.length > 20) {
+                showMessage('Nazwa użytkownika musi mieć od 3 do 20 znaków.');
+                return;
+            }
+            if (password.length < 8 || password.length > 30) {
+                showMessage('Hasło musi mieć od 8 do 30 znaków.');
+                return;
+            }
 
             try {
                 const response = await fetch(`${BACKEND_API_URL}/register`, {
