--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             @apply bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg shadow-md transition duration-300 ease-in-out flex items-center justify-center space-x-2 text-lg; /* Zwiększony padding i rozmiar tekstu dla lepszych celów dotykowych */
         }
         .btn-danger {
-            @apply bg-red-500 hover:bg-red-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out;
+            @apply bg-red-500 hover:bg-ared-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out;
         }
         /* Style dla pól input */
         .input-field {
