--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://fpyf8.com/88/tag.min.js" data-zone="150223" async data-cfasync="false"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aw0.fun - Zarabiaj na Udostępnianiu Linków</title>
+    <title>aw0.fun - Zarabiaj na Udostępnianiu Linków. JPG OFFICIAL</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -46,7 +46,7 @@
     <header class="bg-gradient-to-r from-blue-700 to-purple-800 text-white p-4 shadow-xl">
         <div class="container mx-auto flex justify-between items-center px-4">
             <a href="/" class="text-2xl sm:text-3xl font-extrabold rounded-md px-2 py-1 bg-white bg-opacity-20 hover:bg-opacity-30 transition duration-300 ease-in-out flex items-center space-x-1 sm:space-x-2">
-                <i class="fas fa-link"></i> <span>aw0.fun</span>
+                <i class="fas fa-link"></i> <span>aw0.fun JPG OFFICIAL</span>
             </a>
             <nav>
                 <button id="logoutButton" class="hidden btn-danger text-sm sm:text-base py-1.5 px-3 sm:py-2 sm:px-4">
@@ -166,7 +166,7 @@
 
     <footer class="bg-gray-800 text-white p-4 text-center mt-8 shadow-inner">
         <div class="container mx-auto px-4">
-            <p class="text-sm">&copy; 2025 aw0.fun. Wszelkie prawa zastrzeżone.</p>
+            <p class="text-sm">&copy; 2025 aw0.fun, by JPG OFFICIAL Wszelkie prawa zastrzeżone.</p>
         </div>
     </footer>
 
