--- a/index.html
+++ b/index.html
@@ -7,47 +7,44 @@
     <title>aw0.fun - Zarabiaj na Udostępnianiu Linków. JPG OFFICIAL</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-   <style>
-        /* Ustawienie domyślnej czcionki Inter (lub podobnej sans-serif) */
-        body {
-            font-family: 'Inter', sans-serif;
-            @apply antialiased text-gray-800 leading-relaxed; /* Lepsze wygładzanie, domyślny kolor tekstu i interlinii */
-        }
-        /* Style dla przycisków, aby miały jednolity wygląd */
-        .btn { /* Podstawowy styl przycisku */
-            @apply font-bold py-3 px-6 rounded-lg shadow-lg hover:shadow-xl transform hover:-translate-y-px transition-all duration-200 ease-in-out flex items-center justify-center space-x-2 text-lg focus:outline-none focus:ring-2 focus:ring-offset-2;
-        }
-        .btn-primary {
-            @apply btn bg-blue-600 hover:bg-blue-700 text-white focus:ring-blue-500;
-        }
-        .btn-success {
-            @apply btn bg-green-600 hover:bg-green-700 text-white focus:ring-green-500;
-        }
-        .btn-danger { /* Dostosowany dla spójności, padding i rozmiar tekstu z HTML */
-            @apply bg-red-500 hover:bg-red-600 text-white font-semibold rounded-lg shadow-md hover:shadow-lg transform hover:-translate-y-px transition-all duration-200 ease-in-out flex items-center justify-center space-x-1 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-400;
-        }
-        /* Style dla pól input */
-        .input-field {
-            @apply mt-1 block w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-300 focus:ring-opacity-50 sm:text-base text-lg transition-all duration-200 ease-in-out;
-        }
-        /* Styl dla spinnera ładowania (bez zmian) */
-        .spinner {
-            border: 4px solid rgba(255, 255, 255, 0.3);
-            border-top: 4px solid #fff;
-            border-radius: 50%;
-            width: 24px;
-            height: 24px;
-            animation: spin 1s linear infinite;
-        }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-        /* WhatsApp button specific style */
-        .btn-whatsapp {
-            @apply btn bg-green-500 hover:bg-green-600 text-white focus:ring-green-400; /* Używa .btn jako bazy */
-        }
-    </style>
+    <style>
+        /* Ustawienie domyślnej czcionki Inter (lub podobnej sans-serif) */
+        body {
+            font-family: 'Inter', sans-serif;
+            @apply antialiased; /* Lepsze wygładzanie czcionek */
+        }
+        /* Style dla przycisków, aby miały jednolity wygląd */
+        .btn-primary {
+            @apply bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg shadow-md transition duration-300 ease-in-out flex items-center justify-center space-x-2 text-lg; /* Zwiększony padding i rozmiar tekstu dla lepszych celów dotykowych */
+        }
+        .btn-success {
+            @apply bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg shadow-md transition duration-300 ease-in-out flex items-center justify-center space-x-2 text-lg; /* Zwiększony padding i rozmiar tekstu dla lepszych celów dotykowych */
+        }
+        .btn-danger {
+            @apply bg-red-500 hover:bg-red-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out;
+        }
+        /* Style dla pól input */
+        .input-field {
+            @apply mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-base text-lg; /* Zwiększony padding i rozmiar tekstu dla lepszych celów dotykowych */
+        }
+        /* Styl dla spinnera ładowania */
+        .spinner {
+            border: 4px solid rgba(255, 255, 255, 0.3);
+            border-top: 4px solid #fff;
+            border-radius: 50%;
+            width: 24px; /* Nieco większy spinner */
+            height: 24px; /* Nieco większy spinner */
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+        /* WhatsApp button specific style */
+        .btn-whatsapp {
+            @apply bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition duration-300 ease-in-out flex items-center justify-center space-x-2 text-lg;
+        }
+    </style>
 </head>
 <body class="bg-gradient-to-br from-blue-50 to-purple-100 text-gray-900 flex flex-col min-h-screen">
     <header class="bg-gradient-to-r from-blue-700 to-purple-800 text-white p-4 shadow-xl">
@@ -76,6 +73,11 @@
             <p class="text-sm sm:text-lg text-gray-600 text-center">
                 Zarejestruj się lub zaloguj, aby zacząć zarabiać już dziś!
             </p>
+            <div class="text-center mt-6">
+                <a href="https://whatsapp.com/channel/0029VbAbfCwId7nH2mySZj3l" target="_blank" class="btn-whatsapp">
+                    <i class="fab fa-whatsapp mr-2"></i> Dołącz do naszego kanału WhatsApp!
+                </a>
+            </div>
         </section>
 
         <section id="authSection" class="bg-white p-6 rounded-xl shadow-2xl max-w-md w-full transform hover:scale-105 transition-transform duration-300 ease-in-out mb-8">
