--- a/index.html
+++ b/index.html
@@ -73,11 +73,6 @@
             <p class="text-sm sm:text-lg text-gray-600 text-center">
                 Zarejestruj się lub zaloguj, aby zacząć zarabiać już dziś!
             </p>
-            <div class="text-center mt-6">
-                <a href="https://whatsapp.com/channel/0029VbAbfCwId7nH2mySZj3l" target="_blank" class="btn-whatsapp">
-                    <i class="fab fa-whatsapp mr-2"></i> Dołącz do naszego kanału WhatsApp!
-                </a>
-            </div>
         </section>
 
         <section id="authSection" class="bg-white p-6 rounded-xl shadow-2xl max-w-md w-full transform hover:scale-105 transition-transform duration-300 ease-in-out mb-8">
@@ -102,6 +97,12 @@
                     <div id="loginSpinner" class="spinner hidden"></div>
                 </button>
             </form>
+
+            <div class="text-center mt-6">
+                <a href="https://whatsapp.com/channel/0029VbAbfCwId7nH2mySZj3l" target="_blank" class="btn-whatsapp w-full">
+                    <i class="fab fa-whatsapp mr-2"></i> Dołącz do naszego kanału WhatsApp!
+                </a>
+            </div>
 
             <p class="text-center text-gray-600 mt-6 text-sm">
                 Nie masz konta? <button id="showRegisterForm" class="text-blue-600 hover:text-blue-800 font-semibold transition duration-200">Zarejestruj się</button>
